<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/txtCriteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/criteria" />
    
        <Spinner
        android:id="@+id/spinCate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/txtCriteria"
        />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/remove" />

    <Button
        android:id="@+id/btnSameAsMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnRemove"
        android:layout_marginTop="8dp"
        android:text="@string/same_as_me" />

    <Button
        android:id="@+id/btnAddValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSameAsMe"
        android:layout_alignBottom="@+id/btnSameAsMe"
        android:layout_marginRight="4dp"
        android:layout_toLeftOf="@+id/btnSameAsMe"
        android:text="@string/addValue"
         />

    <TextView
        android:id="@+id/txtCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAddValue"
        android:layout_alignBottom="@+id/btnAddValue"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp"
        android:text="@string/match_condition" />

    <TableLayout
        android:id="@+id/tblValueContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnSameAsMe" >
    </TableLayout>



</RelativeLayout>